test/invalid-semantic/58166_sumIntBool/sumIntBool.agu
-- Author: 58166, Manuel Campos

-- Semantic Error (we cant sum Int with Bool)
let _ : Unit =
    let x : Int = 50;
    let val : Bool = true;
    let result : Int = x + val;
    print(result)